windows fix + ex 03 and 04

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ __pycache__/
 *$py.class
 *.so
 
+# Environment Variables & Secrets
+.env
+.env.*
+!.env.example
+
 # Distribution / Packaging
 .Python
 build/
