--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,24 @@
 {
   "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
   "python.terminal.activateEnvironment": true,
-  
-  "terminal.integrated.defaultProfile.osx": "zsh",
-  "terminal.integrated.profiles.osx": {
-    "zsh": {
-      "path": "/bin/zsh",
-      "args": ["-l", "-c", "source ${workspaceFolder}/.vscode/terminal-init.sh && exec zsh"]
-    },
-    "bash": {
-      "path": "/bin/bash",
-      "args": ["--init-file", "${workspaceFolder}/.vscode/terminal-init.sh"]
-    }
+  "terminal.integrated.env.osx": {
+    "BASH_ENV": "${workspaceFolder}/.vscode/terminal-init.sh",
+    "ENV": "${workspaceFolder}/.vscode/terminal-init.sh"
   },
-  
-  "terminal.integrated.defaultProfile.linux": "bash",
-  "terminal.integrated.profiles.linux": {
-    "bash": {
-      "path": "/bin/bash",
-      "args": ["--init-file", "${workspaceFolder}/.vscode/terminal-init.sh"]
-    }
+  "terminal.integrated.env.linux": {
+    "BASH_ENV": "${workspaceFolder}/.vscode/terminal-init.sh",
+    "ENV": "${workspaceFolder}/.vscode/terminal-init.sh"
   },
-  
-  "terminal.integrated.defaultProfile.windows": "PowerShell",
   "terminal.integrated.profiles.windows": {
     "PowerShell": {
       "source": "PowerShell",
-      "icon": "terminal-powershell"
+      "icon": "terminal-powershell",
+      "args": ["-NoExit", "-File", "${workspaceFolder}/.vscode/terminal-init.ps1"]
     }
   },
-  
-  "terminal.integrated.env.windows": {
-    "PROMPT": "$E[32m(.venv)$E[0m $P$G"
-  },
-  
-  "terminal.integrated.cwd": "${workspaceFolder}"
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "files.exclude": {
+    "**/__pycache__": true,
+    "**/*.pyc": true
+  }
 }
-
